--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Luis_</p>
-        <h1>Eu sou estudant Programação</h1>
+        <h1>Eu sou estudante de Programação</h1>
         <p>Estou aprendendo programaçao!</p>
         <p>Minhas habilidades</p>
         <div>
